include ../common.mk

lib_LIBRARIES = libstage3.a

libstage3_a_SOURCES = \
	stage3.cc \
	flow_control_analysis.cc \
	fill_candidate_datatypes.cc \
	narrow_candidate_datatypes.cc \
	forced_narrow_candidate_datatypes.cc \
	print_datatypes_error.cc \
	datatype_functions.cc \
	lvalue_check.cc \
	array_range_check.cc \
	case_elements_check.cc \
        constant_folding.cc \
        declaration_check.cc \
        enum_declaration_check.cc \
        remove_forward_dependencies.cc

